update sbt 0.13.17. fix deprecation warnings
https://www.scala-sbt.org/0.13/docs/Migrating-from-sbt-012x.html